# skill-eph

./: README.md  SKILL.md  gpt_instructions.md  pyproject.toml  server.py  test_server.py
assets/classifiers/: cno_2001.md
assets/design/: EPH_POST_4T2023.md  EPH_PRE_4T2023.md  EPH_TotUrbano_POST_4T2023.md  EPH_TotUrbano_PRE_4T2023.md
assets/methodology/: eph_continua_vs_total_urbano.md  indicadores_mercado_laboral.md  informalidad_laboral.md  panel_rotante.md  ponderadores.md  que_es_la_eph.md  quiebre_serie_4t2023.md
assets/tools/: eph_package_r.md  pyeph_package.md
docs/specs/: 2026-05-14-eph-context-improvements-design.md
